--- a/Home/Assembly-CSharp-Editor.csproj
+++ b/Home/Assembly-CSharp-Editor.csproj
@@ -192,6 +192,8 @@
       <Project>{37034FAF-6577-E583-9442-D518C07015F5}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{BD04F579-5BD6-792C-7D68-0D6285E8FFB0}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript.unityproj">
+      <Project>{F7F93B84-8959-8283-D04A-A18B35CA07E4}</Project>      <Name>Assembly-UnityScript</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
