--- a/Home/Assembly-CSharp-vs.csproj
+++ b/Home/Assembly-CSharp-vs.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\DoorBehaviour.cs" />
+     <Compile Include="Assets\HandActions.cs" />
      <Compile Include="Assets\Movement.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
